# openexCel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  benchmark_new.py  pyproject.toml
.github/workflows/: publish.yml
src/_openexcel/: cell.c  cell.h  module.c  string_table.c  string_table.h  styles.c  styles.h  workbook.c  workbook.h  worksheet.c  worksheet.h
src/_openexcel/reader/: reader.c  reader.h  xml_sheet.c  xml_sheet.h  xml_sheet_rels.c  xml_sheet_rels.h  xml_sst.c  xml_sst.h  xml_styles.c  xml_styles.h  xml_workbook.c  xml_workbook.h  zip_reader.c  zip_reader.h
src/_openexcel/writer/: sheet_writer.c  sheet_writer.h  sst_writer.c  sst_writer.h  writer.c  writer.h  xml_gen.c  xml_gen.h  zip_writer.c  zip_writer.h
src/openexcel/: __init__.py
tests/: conftest.py  make_fixtures.py  test_cell_object.py  test_conditional_formatting.py  test_data_validation.py  test_formulas.py  test_hyperlinks.py  test_number_format.py  test_page_setup.py  test_read_basic.py  test_read_dates.py  test_read_strings.py  test_roundtrip.py  test_sheet_protection.py  test_styles.py  test_write_basic.py
tests/fixtures/: dates.xlsx  mixed.xlsx  simple.xlsx  strings.xlsx
