[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "openexcel-c"
version = "0.1.2"
description = "High-performance .xlsx reader/writer (C extension)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Karun Gopal", email = "karun.gopal@gmail.com" }
]
keywords = ["xlsx", "excel", "spreadsheet", "openpyxl", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/karungop/openexCel"
Repository = "https://github.com/karungop/openexCel"
Issues = "https://github.com/karungop/openexCel/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark", "openpyxl"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/openexcel"]

[tool.cibuildwheel]
# Build CPython 3.10-3.13 only (no PyPy — C extension relies on CPython internals)
build = "cp310-* cp311-* cp312-* cp313-*"
# Skip 32-bit builds and musl libc (Alpine) — not worth the effort for v0.1
skip = "*-manylinux_i686 *-musllinux*"

[tool.cibuildwheel.linux]
# expat-devel is available in the manylinux2014 image via yum
before-build = "yum install -y expat-devel || (apt-get update && apt-get install -y libexpat1-dev)"
# Build for both x86_64 and arm64 using QEMU emulation
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
# Homebrew expat is installed in the macos-latest runner image
before-build = "brew install expat || true"
# Build native arm64 and cross-compile x86_64
archs = ["arm64", "x86_64"]
